--- a/templates/home/_modalCarousel.html.twig
+++ b/templates/home/_modalCarousel.html.twig
@@ -14,7 +14,7 @@
 					<div class="carousel-inner">
 						{% for image in product.images %}
                             <div class="carousel-item {{ (loop.index0 == id)?'active':'' }}">
-                                <img class="d-block w-100" src="{{ asset('images/products/' ~ image.name ) }}" alt="Immage d'illustration {{ product.title ?? '' }}">
+                                <img class="d-block img-fluid" src="{{ asset('images/products/' ~ image.name ) }}" alt="Immage d'illustration {{ product.title ?? '' }}">
                                 <div class="row">
                                     <p class="col-8 text-left">"{{ product.title ?? '' }}"</p>
                                     <p class="col-4 text-right">Image {{ loop.index }} de {{ product.images|length }}</p>
