--- a/templates/home/category.html.twig
+++ b/templates/home/category.html.twig
@@ -48,7 +48,7 @@
 		{% if category.images|length > 0 %}
 			<div class="w-50 mx-auto my-5">
 				{% for image in category.images %}
-					<img class="img-fluid" src="{{ asset('images/products/' ~ image.name ) }}" alt="Immage d'illustration {{ category.title ?? '' }}">
+					<img class="img-fluid" src="{{ asset('images/products/' ~ image.name )| imagine_filter('medium_size') }}" alt="Immage d'illustration {{ category.title ?? '' }}">
 				{% endfor %}
 			</div>
 		{% endif %}
@@ -104,7 +104,7 @@
 								<a class="text-decoration-none" 
 									title="Aller à la page de {{ product.title }}" 
 									href="{{ path('home_product', { slugCategory: topCategoryTitlesAndSlugs|last.categorySlug, slugProduct: product.slug}) }}">
-										<img class="list-group-image img-fluid w-100" src="{{ asset('images/products/' ~ product.images[0].name )| imagine_filter('miniatures') }}" alt="Immage d'illustration {{ product.title ?? '' }}">     
+										<img class="list-group-image img-fluid d-block mx-auto" src="{{ asset('images/products/' ~ product.images[0].name )| imagine_filter('miniatures') }}" alt="Image d'illustration {{ product.title ?? '' }}">     
 								</a>  
 							{% endif %}    
 							{# Fin Illustration produit #}
@@ -133,8 +133,6 @@
 										{{ product.taxIncludedPrice }}&euro;
 									</p>									
 								</div>
-
-								
 								<div class="col-xs-12 col-md-6 p-0">
 									{# Liens vers produit #}
 										<a class="blue text-decoration-none border-left border-top p-3 font-weight-bold float-right wantToKnowMore" title="Aller à la page de {{ product.title }}" href="{{ path('home_product', { slugCategory: topCategoryTitlesAndSlugs|last.categorySlug, slugProduct: product.slug}) }}">En savoir plus...</a> 
