--- a/templates/home/themes.html.twig
+++ b/templates/home/themes.html.twig
@@ -10,7 +10,7 @@
     {% for category in categories %}
         <div class="col-md-4 my-3">
             <a class="text-decoration-none" href="{{ path('home_category', {slug: category.slug}) }}" title="Aller vers le thème {{ category.title }}">
-                <img class="d-block img-fluid mx-auto" src="{{ asset('images/products/' ~ category.images[0].name ) }}" alt="Logo Ludo et Sophie">
+                <img class="d-block img-fluid mx-auto" src="{{ asset('images/products/' ~ category.images[0].name )| imagine_filter('miniatures_5on3') }}" alt="Logo Ludo et Sophie">
                 <h3 class="text-center blue">{{ category.title }}</h3>
             </a>
         </div>
