correction accueil; Images du site;

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -18,7 +18,7 @@
 						<li class="breadcrumb-item">
 							<a href="{{ path('admin') }}">Dashboard</a>
 						</li>
-						<li class="breadcrumb-item active">Acceuil</li>
+						<li class="breadcrumb-item active">Accueil</li>
 					</ol>
 				</div>
 				<!-- /.col -->
