--- a/templates/base-admin.html.twig
+++ b/templates/base-admin.html.twig
@@ -39,7 +39,7 @@
                         <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
                             <div class="dropdown-divider"></div>
                             <a href="{{ path('home') }}" class="dropdown-item">
-                                <i class="nav-icon fas fa-home"></i>Acceuil du site
+                                <i class="nav-icon fas fa-home"></i>Accueil du site
                             </a>
                             <div class="dropdown-divider"></div>
                             <a href="{{ path('app_logout') }}" class="dropdown-item">
@@ -54,7 +54,7 @@
             <!-- Main Sidebar Container -->
             <aside class="main-sidebar sidebar-dark-primary elevation-4">
                 <!-- Brand Logo -->
-                <a href="{{ path('admin') }}" title="Retour vers la page d'acceuil administration">
+                <a href="{{ path('admin') }}" title="Retour vers la page d'accueil administration">
                     <img src="{{ asset('images/logo_neutre.jpg') }}" alt="Logo Ludo et Sophie" class="img-circle d-block w-75 mx-auto mt-2 mb-0">
                 </a>
 
