--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,8 +39,8 @@
 
                     </div>
                     <div class="col-md-10 mt-5">
-                        <a href="{{ path('home') }}" title="Ludo et Sophie : Acceuil" >
-                            <img class="img-fluid" src="{{ asset('images/icones/nouveaulogo2.png') }}" alt="Image d'acceuil du site Ludo et Sophie">
+                        <a href="{{ path('home') }}" title="Ludo et Sophie : Accueil" >
+                            <img class="img-fluid" src="{{ asset('images/icones/nouveaulogo2.png') }}" alt="Image d'accueil du site Ludo et Sophie">
                         </a>
                         <h1 class="font-italic"><span class="red">et la culture devient</span> <span class="blue">un jeu d'***REMOVED***</span><span class="orange">(s)</span><span class="blue">!</span></h1>
                     </div>
