--- a/templates/home/allProducts.html.twig
+++ b/templates/home/allProducts.html.twig
@@ -7,7 +7,7 @@
 	{# Arborescence #}
 	<ol class="breadcrumb bg-white">
 		<li class="breadcrumb-item">
-			<a class="text-muted" href="{{ path('home') }}" title="Ludo et Sophie : Acceuil">
+			<a class="text-muted" href="{{ path('home') }}" title="Ludo et Sophie : Accueil">
 				<i class="fa fa-home"></i>
 			</a>
 		</li>
