--- a/templates/home/product.html.twig
+++ b/templates/home/product.html.twig
@@ -9,7 +9,7 @@
 	{# Arborescence de filtrage par cétagories #}
 	<ol class="breadcrumb bg-white">
 		<li class="breadcrumb-item">
-			<a class="text-muted" href="{{ path('home') }}" title="Ludo et Sophie : Acceuil">
+			<a class="text-muted" href="{{ path('home') }}" title="Ludo et Sophie : Accueil">
 				<i class="fa fa-home"></i>
 			</a>
 		</li>
